Added additional TDA tutorials

--- a/CBE660/TDA1_Graph_Representations.ipynb
+++ b/CBE660/TDA1_Graph_Representations.ipynb
@@ -14,6 +14,15 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To access this notebook in Google Colab, please click below:\n",
+    "\n",
+    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA1_Graph_Representations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "yj4cd7bHvytu"
    },
