--- a/CBE660/TDA_2D_Manifolds.ipynb
+++ b/CBE660/TDA_2D_Manifolds.ipynb
@@ -6,7 +6,7 @@
     "id": "vIAD-Jq226ye"
    },
    "source": [
-    "# TDA Tutorial 2: Images and Manifolds\n",
+    "# TDA Tutorial: 2-D Manifolds\n",
     "By: David Cole and Victor M. Zavala\n",
     "\n",
     "Based on work done by Dr. Alexander Smith and published [here](https://doi.org/10.1016/j.compchemeng.2021.107463). Code for creating the visualizations was constructured with the help of ChatGPT"
@@ -34,7 +34,7 @@
    "source": [
     "To access this notebook in Google Colab, please click below:\n",
     "\n",
-    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA2_Images_and_Manifolds.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
+    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA_2D_Manifolds.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
    ]
   },
   {
