--- a/CBE660/TDA_3D_Manifolds.ipynb
+++ b/CBE660/TDA_3D_Manifolds.ipynb
@@ -6,7 +6,7 @@
     "id": "h2GB3V1J6PMI"
    },
    "source": [
-    "# TDA Tutorial 4: Point Clouds Additional Example\n",
+    "# TDA Tutorial: 3-D Manifolds\n",
     "By: David Cole and Victor M. Zavala\n",
     "\n",
     "Based on work done by Dr. Alexander Smith and published [here](https://doi.org/10.1016/j.compchemeng.2021.107463). Code for creating the visualizations was constructured with the help of ChatGPT"
@@ -34,7 +34,7 @@
    "source": [
     "To access this notebook in Google Colab, please click below:\n",
     "\n",
-    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA4_Point_Clouds_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
+    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA_3D_Manifolds.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
    ]
   },
   {
@@ -43,9 +43,9 @@
     "id": "HNsuLePq6PMM"
    },
    "source": [
-    "## Point Clouds with Cubical Complexes\n",
+    "## 3D Manifolds with Cubical Complexes\n",
     "\n",
-    "In some cases, we will have point clouds that are well distributed but which encode data on them. For instance, we may have a mesh structure (such as a discretized domain of a 3-D box) where we have data that describes a measurement at a certain point. When the point clouds are forming a convenient mesh structure, we can use cubical complexes to \"model\" our data. In the previous tutorial, we applied cubical complexes to images (a 2-D) space, but these complexes can apply across higher dimensions as well. In this case, we still have rectangular faces, but they can form higher order structures (such as rectangular prisms). Below, we will consider an example of the concentration of a chemical in a 3-D space."
+    "Manifolds are not restricted to 2 dimensions (e.g., images), and below we will explore a 3-D manifold (a 3-D density field). This kind of data can arise in many applications, such as a temperature or pressure profile in a chemical reactor. As with images, we can use cubical complexes to \"model\" the data. In the tutorial on 2-D manifolds, the cubical complexes were formed by rectangles that captured the surface of the manifold and which encoded data. Cubical complexes can likewise be applied to higher dimensional data as well; for a 3-D manifold, the cubical complex forms rectangular prisms (i.e., they are expanded across a third dimension). Below we will consider an example of the concentration of a chemical in a 3-D space."
    ]
   },
   {
