--- a/CBE660/TDA_Graphs.ipynb
+++ b/CBE660/TDA_Graphs.ipynb
@@ -6,7 +6,7 @@
     "id": "9_SSwv51vytp"
    },
    "source": [
-    "# TDA Tutorial 1: Graph Representations\n",
+    "# TDA Tutorial: Graphs\n",
     "By: David Cole and Victor M. Zavala\n",
     "\n",
     "Based on work done by Dr. Alexander Smith, as outlined in [this paper](https://www.sciencedirect.com/science/article/pii/S0098135421002416?via%3Dihub). Code for creating the visualizations was constructured with the help of ChatGPT"
@@ -18,7 +18,7 @@
    "source": [
     "To access this notebook in Google Colab, please click below:\n",
     "\n",
-    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA1_Graph_Representations.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
+    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA_Graphs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
    ]
   },
   {
