--- a/CBE660/TDA_Point_Clouds.ipynb
+++ b/CBE660/TDA_Point_Clouds.ipynb
@@ -6,7 +6,7 @@
     "id": "2kzhTCUa4H0y"
    },
    "source": [
-    "# TDA Tutorial 3: Point Clouds\n",
+    "# TDA Tutorial: Point Clouds\n",
     "By: David Cole and Victor M. Zavala\n",
     "\n",
     "Based on work done by Dr. Alexander Smith and published [here](https://pubs.acs.org/doi/full/10.1021/acsnano.4c04969). Code for creating the visualizations was constructured with the help of ChatGPT"
@@ -34,7 +34,7 @@
    "source": [
     "To access this notebook in Google Colab, please click below:\n",
     "\n",
-    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA3_Point_Clouds.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
+    "<a href=\"https://githubtocolab.com/zavalab/Tutorials/blob/master/CBE660/TDA_Point_Clouds.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open in Colab\"/></a>"
    ]
   },
   {
