--- a/CBE660/TDA_3D_Manifolds.ipynb
+++ b/CBE660/TDA_3D_Manifolds.ipynb
@@ -1279,7 +1279,7 @@
     "id": "S02K3A5j6PMQ"
    },
    "source": [
-    "Note that all three simulations do not visualling look very different. However, the EC can capture some of the spatial and temporal differences obsvered.\n",
+    "Note that all three simulations generally look similar. However, the EC can capture some of the spatial and temporal differences obsvered.\n",
     "\n",
     "In Tutorial 2, we showed how a cubical complex can be created for a 2-D image. In this case, we have a 3-D space, and our cubical complexes can still capture these structures, but each complex will be a higher dimension (e.g., each \"building block\" will be a rectangular prism instead of just a rectangle. This change is easy to make within Gudhi, where we pass three values to the `dimensions` argument rather than only 2. Since we are in a 3-D space, we also will have three betti numbers to compute the EC."
    ]
