--- a/CBE660/t-SNE_Solvents.ipynb
+++ b/CBE660/t-SNE_Solvents.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## **Navigating Chemical Structures of Solvents**\n",
     "\n",
-    "t-SNE Tutorial: Organic Solvents\n",
+    "t-SNE Tutorial: Organic Solvent Space\n",
     "\n",
     "By: Ugochukwu M. Ikegwu and Victor M. Zavala\n",
     "\n",
